crates/hm-pipeline-ir/tests/snapshots/schema_snapshot__command_step_schema_is_stable.snap
---
source: crates/hm-pipeline-ir/tests/schema_snapshot.rs
expression: schema
---
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "title": "Step",
  "description": "A single build action within a pipeline.\n\nSerialized as a JSON object inside each graph node's `step` field. The `key` is the unique identifier used to reference this step in edges and log output.",
  "type": "object",
  "required": [
    "action",
    "key"
  ],
  "properties": {
    "key": {
      "description": "Unique identifier for this step within the pipeline.",
      "type": "string"
    },
    "action": {
      "description": "Behavior of the node",
      "allOf": [
        {
          "$ref": "#/definitions/StepAction"
        }
      ]
    },
    "label": {
      "description": "Human-readable label shown in build output.",
      "default": null,
      "type": [
        "string",
        "null"
      ]
    },
    "image": {
      "description": "Docker image to boot from. Root steps without an image inherit `PipelineGraph::default_image`; child steps boot from their parent's committed snapshot.",
      "default": null,
      "type": [
        "string",
        "null"
      ]
    },
    "timeout_seconds": {
      "description": "Per-step environment variables merged on top of the pipeline env. Maximum wall-clock seconds before the step is killed.\n\n`NonZeroU32`: a `0`-second budget is rejected at the wire boundary.",
      "default": null,
      "type": [
        "integer",
        "null"
      ],
      "format": "uint32",
      "minimum": 1.0
    },
    "cache": {
      "description": "Cache configuration for this step's committed snapshot.",
      "default": null,
      "anyOf": [
        {
          "$ref": "#/definitions/Cache"
        },
        {
          "type": "null"
        }
      ]
    },
    "runner": {
      "description": "Step-executor (runner) name. `None` falls back to the default runner (Docker in the shipped configuration).",
      "type": [
        "string",
        "null"
      ]
    },
    "runner_args": {
      "description": "Runner-specific extra fields passed verbatim to the runner."
    }
  },
  "definitions": {
    "StepAction": {
      "anyOf": [
        {
          "description": "A single build command within a pipeline.",
          "type": "object",
          "required": [
            "cmd"
          ],
          "properties": {
            "cmd": {
              "description": "Shell command to execute inside the container.",
              "type": "string"
            },
            "env": {
              "description": "Per-step environment variables merged on top of the pipeline env.",
              "default": null,
              "type": [
                "object",
                "null"
              ],
              "additionalProperties": {
                "type": "string"
              }
            }
          }
        },
        {
          "description": "Archive mount from a local path to a workspace path",
          "type": "object",
          "required": [
            "from",
            "to"
          ],
          "properties": {
            "from": {
              "type": "string"
            },
            "to": {
              "type": "string"
            }
          }
        }
      ]
    },
    "Cache": {
      "description": "Snapshot cache configuration for a step.",
      "type": "object",
      "required": [
        "policy"
      ],
      "properties": {
        "policy": {
          "description": "Cache policy name (e.g. `\"content-hash\"`).",
          "type": "string"
        },
        "key": {
          "description": "Explicit cache key override; derived from the step if absent.",
          "default": null,
          "type": [
            "string",
            "null"
          ]
        }
      }
    }
  }
}
