crates/hm-pipeline-ir/tests/snapshots/schema_snapshot__pipeline.snap
---
source: crates/hm-pipeline-ir/tests/schema_snapshot.rs
assertion_line: 15
expression: schema
---
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "title": "Pipeline",
  "type": "object",
  "required": [
    "steps",
    "version"
  ],
  "properties": {
    "version": {
      "description": "Must equal `\"0\"` — bumping this is reserved for breaking schema changes, none of which are scheduled. The v0 schema gains optional fields in-place (see `runner` below).",
      "type": "string"
    },
    "env": {
      "default": null,
      "type": [
        "object",
        "null"
      ],
      "additionalProperties": {
        "type": "string"
      }
    },
    "default_image": {
      "default": null,
      "type": [
        "string",
        "null"
      ]
    },
    "steps": {
      "type": "array",
      "items": {
        "$ref": "#/definitions/Step"
      }
    }
  },
  "definitions": {
    "Step": {
      "oneOf": [
        {
          "type": "object",
          "required": [
            "cmd",
            "key",
            "type"
          ],
          "properties": {
            "type": {
              "type": "string",
              "enum": [
                "command"
              ]
            },
            "key": {
              "type": "string"
            },
            "label": {
              "default": null,
              "type": [
                "string",
                "null"
              ]
            },
            "cmd": {
              "type": "string"
            },
            "builds_in": {
              "default": null,
              "type": [
                "string",
                "null"
              ]
            },
            "image": {
              "default": null,
              "type": [
                "string",
                "null"
              ]
            },
            "env": {
              "default": null,
              "type": [
                "object",
                "null"
              ],
              "additionalProperties": {
                "type": "string"
              }
            },
            "timeout_seconds": {
              "default": null,
              "type": [
                "integer",
                "null"
              ],
              "format": "uint32",
              "minimum": 0.0
            },
            "cache": {
              "default": null,
              "anyOf": [
                {
                  "$ref": "#/definitions/Cache"
                },
                {
                  "type": "null"
                }
              ]
            },
            "runner": {
              "description": "Names the step-executor plugin that should run this step. `None` ⇒ the default executor handles it (Docker, in the shipped configuration).",
              "type": [
                "string",
                "null"
              ]
            },
            "runner_args": {
              "description": "Plugin-specific extra fields. Validated by the executor plugin's `StepExecutorSpec::step_schema` if it set one."
            }
          }
        },
        {
          "type": "object",
          "required": [
            "type"
          ],
          "properties": {
            "type": {
              "type": "string",
              "enum": [
                "wait"
              ]
            },
            "continue_on_failure": {
              "default": false,
              "type": "boolean"
            }
          }
        }
      ]
    },
    "Cache": {
      "type": "object",
      "required": [
        "policy"
      ],
      "properties": {
        "policy": {
          "type": "string"
        },
        "key": {
          "default": null,
          "type": [
            "string",
            "null"
          ]
        }
      }
    }
  }
}
