crates/hm-pipeline-ir/tests/snapshots/schema_snapshot__pipeline_step_schema_is_stable.snap
---
source: crates/hm-pipeline-ir/tests/schema_snapshot.rs
expression: schema
---
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "title": "PipelineStep",
  "description": "A node in the pipeline graph.\n\nGraph nodes always carry a [`StepEval`]. Concrete command nodes are converted to [`CommandStep`] only at the step-runner boundary.",
  "type": "object",
  "required": [
    "eval",
    "key"
  ],
  "properties": {
    "key": {
      "type": "string"
    },
    "label": {
      "default": null,
      "type": [
        "string",
        "null"
      ]
    },
    "eval": {
      "$ref": "#/definitions/StepEval"
    },
    "image": {
      "default": null,
      "type": [
        "string",
        "null"
      ]
    },
    "env": {
      "default": null,
      "type": [
        "object",
        "null"
      ],
      "additionalProperties": {
        "type": "string"
      }
    },
    "timeout_seconds": {
      "default": null,
      "type": [
        "integer",
        "null"
      ],
      "format": "uint32",
      "minimum": 1.0
    },
    "cache": {
      "default": null,
      "anyOf": [
        {
          "$ref": "#/definitions/Cache"
        },
        {
          "type": "null"
        }
      ]
    },
    "runner": {
      "type": [
        "string",
        "null"
      ]
    },
    "runner_args": true
  },
  "definitions": {
    "StepEval": {
      "description": "Evaluation performed when the scheduler reaches a pipeline node.",
      "oneOf": [
        {
          "description": "Execute a concrete shell command.",
          "type": "object",
          "required": [
            "cmd",
            "type"
          ],
          "properties": {
            "type": {
              "type": "string",
              "enum": [
                "cmd"
              ]
            },
            "cmd": {
              "type": "string"
            }
          }
        },
        {
          "description": "Invoke a registered DSL target and lower its result to a graph fragment.",
          "type": "object",
          "required": [
            "target_name",
            "type"
          ],
          "properties": {
            "type": {
              "type": "string",
              "enum": [
                "dynamic"
              ]
            },
            "target_name": {
              "type": "string"
            }
          }
        }
      ]
    },
    "Cache": {
      "description": "Snapshot cache configuration for a step.",
      "type": "object",
      "required": [
        "policy"
      ],
      "properties": {
        "policy": {
          "description": "Cache policy name (e.g. `\"content-hash\"`).",
          "type": "string"
        },
        "key": {
          "description": "Explicit cache key override; derived from the step if absent.",
          "default": null,
          "type": [
            "string",
            "null"
          ]
        }
      }
    }
  }
}
